# Arider

./: .dir-locals.el  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.org
config/: ariderconfig.hpp.in
doc/: Todo.org
include/: animation.hpp  arider_config.hpp  ariderconfig.hpp  block.hpp  character.hpp  game.hpp  glsl_program.hpp  io_manager.hpp  level.hpp  levelloader.hpp  particle.hpp  physics.hpp  pico_png.hpp  player.hpp  sprite.hpp  vertex.hpp
res/levels/: level1.txt
res/shaders/: color_shading.frag  color_shading.vert
src/: animation.cpp  arider.cpp  block.cpp  character.cpp  game.cpp  glsl_program.cpp  image_loader.cpp  io_manager.cpp  level.cpp  levelloader.cpp  main.cpp  particle.cpp  player.cpp  sprite.cpp
test/: test001.cpp  test002.cpp  test003.cpp
zedengine/: CMakeLists.txt
